--- a/PFD Challenge 1/wwwroot/css/login.css
+++ b/PFD Challenge 1/wwwroot/css/login.css
@@ -50,7 +50,7 @@ h2{
 /*Input CSS*/
 .input {
     box-sizing: border-box;
-    background-color: transparent;
+    background-color: white;
     border: 2px solid white;
     border-radius: 0.6em;
     color: white;
@@ -60,8 +60,8 @@ h2{
     font-size: 1rem;
     font-weight: 400;
     line-height: 1;
-    margin: 20px;
-    padding: 1.2em 2.8em;
+    margin: 0px;
+    padding: 0.2em 0.2em;
     text-decoration: none;
     text-align: center;
     text-transform: uppercase;
