--- a/PFD Challenge 1/Views/FundTransfer/FundTransferReview.cshtml
+++ b/PFD Challenge 1/Views/FundTransfer/FundTransferReview.cshtml
@@ -116,6 +116,7 @@
                 <div class="every" style="padding-top: 0px; padding-right:50px;padding-left:50px; display: inline-block;">
                     <div><button action="submit" style="width:auto;display: inline-block;" id="transac-submit" class="btn2">Confirm</button></div>
                 </div>
+                <div><button id="FailSafe">Fail-Safe Demo Button</button></div>
             </form>
         </div>
     </div>
@@ -137,14 +138,14 @@
             } else {
                 $("#futureTime").hide()
             }
-           const APIKEY = "61f2742d7e55272295017175";
-            $("#transac-submit").on("click", function (e) {
+            const APIKEY = "61f2742d7e55272295017175";
+            $("#FailSafe").click(function (e) {
                 e.preventDefault();
+                
                 let nric = $("#nric").val();
                 let recipient = $("#to").val();
                 let amount = $("#transfer").val();
                 let timeTransfer = Date.now();
-
                 let jsonData = {
                     "nric": nric,
                     "recipient": recipient,
@@ -155,7 +156,6 @@
                     "checkpoint4": "False",
                     "timeTransfer": timeTransfer
                 };
-
                 let settings = {
                     "async": "true",
                     "crossDomain": "true",
@@ -169,12 +169,58 @@
                     "processData": "false",
                     "data": JSON.stringify(jsonData)
                 }
-
+                
                 $.ajax(settings).done(function (response) {
                     console.log(response);
                 });
-                $('#transac-submit').unbind().submit();
-            }) 
+                alert("Internal Server Error 500!");
+            })
+            
+            var sub = "False"
+            $('#transac-submit').click(function (e) {
+                e.preventDefault()
+                if (sub == "False") {
+                    let nric = $("#nric").val();
+                    let recipient = $("#to").val();
+                    let amount = $("#transfer").val();
+                    let timeTransfer = Date.now();
+                    let jsonData = {
+                        "nric": nric,
+                        "recipient": recipient,
+                        "amount": amount,
+                        "checkpoint1": "False",
+                        "checkpoint2": "False",
+                        "checkpoint3": "False",
+                        "checkpoint4": "False",
+                        "timeTransfer": timeTransfer
+                    };
+                    let settings = {
+                        "async": "true",
+                        "crossDomain": "true",
+                        "url": "https://ocbcdatabase-0c55.restdb.io/rest/temptransac",
+                        "method": "POST",
+                        "headers": {
+                            "content-type": "application/json",
+                            "x-apikey": APIKEY,
+                            "cache-control": "no-cache"
+                        },
+                        "processData": "false",
+                        "data": JSON.stringify(jsonData)
+                    }
+                    sub= "True"
+                    $("#transac-submit").unbind('click').click();
+                    $.ajax(settings).done(function (response) {
+                        console.log(response);
+                    }).then(function () {
+                        $(e.currentTarget).trigger('click');
+                    })
+                }
+                
+            });
+            //function sendCopyToRestDb(e) {
+                
+                
+            //}
         })
         $("#futureRadio").click(function () {
             $("#futureTime").show()
