--- a/PFD Challenge 1/Views/Home/Index.cshtml
+++ b/PFD Challenge 1/Views/Home/Index.cshtml
@@ -40,6 +40,7 @@
                         </div>
                         
                         <div id="toShow" class="form-group">
+                            <div>Note: First-time users to login via password and Telegram OTP. Head to windows hello settings to enable the windows hello sign in</div>
                             <div class="every" style="display: inline-block;">
                                 <button class="btn2" id="windowsHello">Log in</button>
                             </div>
